filter by price , category and footer overlap fixed

--- a/frontend/src/component/Layout/Footer/Footer.css
+++ b/frontend/src/component/Layout/Footer/Footer.css
@@ -1,5 +1,5 @@
 footer {
-  margin-top: 10vmax;
+  margin-top: 15vmax;
   padding: 2vmax;
   background-color: rgb(34, 33, 33);
   color: wheat;
