--- a/frontend/src/component/Products/Products.css
+++ b/frontend/src/component/Products/Products.css
@@ -62,3 +62,40 @@
   background-color: tomato;
   color: white;
 }
+
+.filterBox {
+  width: 10vmax;
+  position: absolute;
+  top: 8vmax;
+  left: 1vmax;
+}
+
+.categoryBox {
+  padding: 0;
+  margin: 0.5vmax 0;
+}
+
+.catgeoryLi {
+  list-style: none;
+  color: rgba(37, 2, 2, 0.533);
+  font: 400 1vmax "Roboto";
+  margin: 0.4vmax;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+.catgeoryLi:hover {
+  color: tomato;
+}
+
+@media screen and (max-width: 600px) {
+  .filterBox {
+    width: 20vmax;
+    position: static;
+    margin: auto;
+  }
+
+  .page-link {
+    font: 300 1.7vmax "Roboto";
+  }
+}
